--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,24 @@
 [package]
-name = "wisdom"
+name = "loki-discord-bot"
 version = "0.1.0"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
-repository = "https://github.com/Lyrenhex/Wisdom"
+repository = "https://github.com/Lyrenhex/Loki"
 license = "MIT OR Apache-2.0"
+publish = false
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
+env_logger = "0.10"
+toml = "0.5"
+serde = { version = "1.0", features = ["serde_derive"] }
 
 [dependencies.serenity]
-version = "0.10"
+version = "0.11"
 default-features = false
 features = [
     "builder",
