--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
 env_logger = "0.10"
 toml = "0.5"
 serde = { version = "1.0", features = ["serde_derive"] }
+log = "0.4"
 
 [dependencies.serenity]
 version = "0.11"
