--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loki-discord-bot"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
@@ -17,6 +17,7 @@ toml = "0.7.1"
 serde = { version = "1.0", features = ["serde_derive"] }
 log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
+rand = "0.8.5"
 
 [dependencies.serenity]
 version = "0.11"
