--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loki-discord-bot"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
@@ -9,6 +9,11 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+status_meaning = []
+memes = []
+stream_indicator = []
 
 [dependencies]
 tokio = { version = "^1.22", features = ["macros", "rt-multi-thread"] }
