--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ log = "^0.4"
 chrono = { version = "^0.4", features = ["serde"] }
 rand = "^0.8.5"
 tinyvec = "^1.6.0"
+# Added due to reqwest dependency problems when cross-compiling for RPi
+openssl = { version = "^0.10.32", features = ["vendored"] }
 
 [dependencies.serenity]
 version = "^0.11"
