--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loki-discord-bot"
-version = "0.6.0"
+version = "0.6.1"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
@@ -11,9 +11,22 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-status_meaning = []
+default = ["guild-presences", "guild-members", "message-content", "events", "memes", "status-meaning", "thread-reviver"]
+
+# Privileged Intents
+# These are feature supersets to enable features requiring these intents.
+guild-presences = ["stream-indicator"]
+guild-members = ["timeout-monitor"]
+message-content = ["text-response"]
+
+# Feature sets
+events = []
 memes = []
-stream_indicator = []
+status-meaning = []
+stream-indicator = []
+text-response = []
+thread-reviver = []
+timeout-monitor = []
 
 [dependencies]
 tokio = { version = "^1.22", features = ["macros", "rt-multi-thread"] }
