Add nickname lottery feature + formatting
- Added nickname lottery.
  - Individual users can be assigned lists of potential nicknames.
  - After a random amount of time (between 30 minutes to a week), select
    a random user and change their nickname to a random option from
    their list.
- Formatting improvements.
  - Pretty noisy diff as a result. Ah well.
- Ensure collectors only await 1 response before finishing.
  - It turns out this was also causing a bug whereby, say, setting
    multiple text responses in a row would actually make them all say
    the same thing.
  - This was more prominent with the username lists in testing, so it's
    finally fixed!
  - TODO: At some point, setting some random IDs for the modals would be
    ideal to better ensure uniqueness (and thus avoid multiple
    collectors processing the same modal response, if a prior modal was
    closed without submitting and hadn't timed out yet).
    - Ideally, I want to refactor these anyway, so this is something to
      come back to later in a future PR.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loki-discord-bot"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
@@ -11,7 +11,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["guild-presences", "guild-members", "message-content", "events", "memes", "status-meaning", "stream-indicator", "text-response", "thread-reviver", "timeout-monitor"]
+default = ["events", "memes", "nickname-lottery", "status-meaning", "stream-indicator", "text-response", "thread-reviver", "timeout-monitor"]
 
 # Privileged Intents
 guild-presences = []
@@ -22,6 +22,7 @@ message-content = []
 # Any features requiring a specific privileged intent will automatically enable that intent's feature.
 events = []
 memes = []
+nickname-lottery = []
 status-meaning = []
 stream-indicator = ["guild-presences"]
 text-response = ["message-content"]
