--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loki-discord-bot"
-version = "0.8.0"
+version = "0.8.1"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
@@ -11,7 +11,16 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["events", "memes", "nickname-lottery", "status-meaning", "stream-indicator", "text-response", "thread-reviver", "timeout-monitor"]
+default = [
+    "events",
+    "memes",
+    "nickname-lottery",
+    "status-meaning",
+    "stream-indicator",
+    "text-response",
+    "thread-reviver",
+    "timeout-monitor",
+]
 
 # Privileged Intents
 guild-presences = []
@@ -32,7 +41,7 @@ timeout-monitor = ["guild-members"]
 [dependencies]
 tokio = { version = "^1.22", features = ["macros", "rt-multi-thread"] }
 env_logger = "^0.10"
-toml = "^0.7.1"
+toml = "^0.8"
 serde = { version = "^1.0", features = ["serde_derive"] }
 log = "^0.4"
 chrono = { version = "^0.4", features = ["serde"] }
