--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.12.0"
 edition = "2021"
 description = "A bot to serve various meme-related purposes within a personal Discord server."
 readme = "README.md"
-repository = "https://github.com/Lyrenhex/Loki"
+repository = "https://code.igland.xyz/lyrenhex/loki"
 license = "MIT OR Apache-2.0"
 publish = false
 
